[gd_scene load_steps=9 format=3 uid="uid://v6ydkcp82l4j"]

[ext_resource type="PackedScene" uid="uid://bimjavdw4ifpw" path="res://scenes/windows/window_base.tscn" id="1_73g2y"]
[ext_resource type="Script" path="res://scenes/windows/customers/window_customers.gd" id="2_gl3m3"]
[ext_resource type="Theme" uid="uid://b1v6gwakv465t" path="res://scenes/windows/window.tres" id="3_mcdco"]
[ext_resource type="Texture2D" uid="uid://cortptyextlgd" path="res://assets/icons/add_circle.svg" id="4_appd3"]
[ext_resource type="Texture2D" uid="uid://b7qwd2xiomy0y" path="res://assets/icons/add_circle_hovered.svg" id="5_oeegh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7fylf"]
content_margin_left = 13.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dea8u"]
bg_color = Color(0.109804, 0.109804, 0.109804, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_phxpw"]
bg_color = Color(0.188235, 0.188235, 0.188235, 1)

[node name="window_customers" instance=ExtResource("1_73g2y")]
title = "Kunden"
script = ExtResource("2_gl3m3")

[node name="customer_search" type="HBoxContainer" parent="content/v_box" index="0"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme = ExtResource("3_mcdco")

[node name="label" type="Label" parent="content/v_box/customer_search" index="0"]
layout_mode = 2
theme = ExtResource("3_mcdco")
text = "Kunde:"

[node name="container" type="Control" parent="content/v_box/customer_search" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="input" type="LineEdit" parent="content/v_box/customer_search/container" index="0"]
layout_mode = 2
offset_left = 5.0
offset_right = 523.0
offset_bottom = 32.0
size_flags_horizontal = 3
theme = ExtResource("3_mcdco")

[node name="prediction" type="Label" parent="content/v_box/customer_search/container" index="1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.196078)
theme_override_styles/normal = SubResource("StyleBoxEmpty_7fylf")
vertical_alignment = 1
autowrap_mode = 1
text_overrun_behavior = 1

[node name="add_customer_button" type="TextureButton" parent="content/v_box/customer_search" index="2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture_normal = ExtResource("4_appd3")
texture_pressed = ExtResource("5_oeegh")
texture_hover = ExtResource("5_oeegh")
ignore_texture_size = true
stretch_mode = 4

[node name="all_customers" type="PanelContainer" parent="content/v_box" index="1"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_mcdco")
theme_override_styles/panel = SubResource("StyleBoxFlat_dea8u")

[node name="v_box" type="VBoxContainer" parent="content/v_box/all_customers" index="0"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_mcdco")
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="content/v_box/all_customers/v_box" index="0"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme = ExtResource("3_mcdco")
theme_override_styles/normal = SubResource("StyleBoxFlat_phxpw")
text = "Alle Kunden"
horizontal_alignment = 1
vertical_alignment = 1

[node name="scroll" type="ScrollContainer" parent="content/v_box/all_customers/v_box" index="1"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_mcdco")
horizontal_scroll_mode = 0

[node name="customer_list" type="VBoxContainer" parent="content/v_box/all_customers/v_box/scroll" index="0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_mcdco")
theme_override_constants/separation = 0

[connection signal="text_changed" from="content/v_box/customer_search/container/input" to="." method="_on_input_text_changed"]
[connection signal="pressed" from="content/v_box/customer_search/add_customer_button" to="." method="_on_add_customer_button_pressed"]
